# trekker

./: .dockerignore  .env.example  .env.production.example  .gitignore  ADMIN.md  BETA_ANALYTICS.md  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  Dockerfile  README.md  bot-trekker.code-workspace  docker-compose.yml  nixpacks.toml  railway.toml  vercel.json
backend/: Dockerfile  alembic.ini  app.db  entrypoint.sh  pyproject.toml  requirements.txt  test.db  test_weekly_reports.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/models/: __init__.py  ai.py  ai_analysis.py  community.py  daily_goals.py  entry.py  event.py  feedback.py  goal.py  life_balance.py  reminder.py  user.py  voice.py  weekly_report.py
backend/app/schemas/: ai.py  analytics.py  auth.py  community.py  daily_goals.py  entry.py  goal.py  home.py  settings.py  user.py
backend/app/services/: ai_service.py  reminder_service.py  telegram_auth.py  voice_service.py  weekly_report_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0f9fc327d42f_add_feedback_messages_table.py  305d4d7670b9_add_all_missing_tables.py  87f7dd3795a6_initial_schema.py  a318bc88c71c_add_life_balance_tables.py  b1c5d8e9f2a4_add_community_support_circle.py  c2a5f8e9b1d2_add_user_profile_fields.py  d3b6e9c2a5f1_fix_birth_date_column.py  (+4 more)
backend/scripts/: delete_user.py
backend/tests/: conftest.py  test_goal_review.py  test_return_state.py  test_weekly_reflection.py
bot/: pyproject.toml
bot/bot/: config.py  database.py  main.py  scheduler.py
bot/bot/handlers/: __init__.py  (+6 more)
(+54 files in other folders)
