[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-observation-bot"
version = "0.1.0"
description = "Telegram bot for self-observation app"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "APScheduler>=3.10",
    "SQLAlchemy>=2.0",
    "sqlmodel>=0.0.16",
    "anthropic>=0.28",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
